deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: salt-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: salt
  template:
    metadata:
      labels:
        app: salt
    spec:
      containers:
        - name: salt
          image: dmitryhoncharuk/salt
---
apiVersion: v1
kind: Service
metadata:
  name: salt-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: salt
  ports:
    - name: salt
      protocol: TCP
      port: 3000
      targetPort: 3000
